--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 
 
+vehical.modelname.required=ModelName is required
+vehical.price.range=Price range should be a number
+vehical.features.exterior.interior=Vehicle exterior and interior is requried
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
@@ -15,3 +19,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
 
 jdbc:h2:file:D:\Downloads\Database
+
+
+#actuator 
+info.app.name=Ford Vehicle Info
+info.app.description=Submit Vehicle info and List Vehicles from Ford
+info.app.version=1.0.0
+
+management.endpoints.web.exposure.include=*
+
+# Exclude individual endpoints with a comma-delimited list
+# management.endpoints.web.exposure.exclude=health,info
